--- a/src/features/houses/Houses.css
+++ b/src/features/houses/Houses.css
@@ -15,6 +15,7 @@
   content: '✨';
   position: absolute;
   left: 50%;
+  margin-top: 20px;
   transform: translateX(-50%);
   top: -40px;
   font-size: 40px;
